@@ -738,9 +738,11 @@ public final class StandardPBEByteEncryptor implements PBEByteEncryptor {
             initialize();
         }
         
-        // Check that the received message is bigger than the salt
-        if (encryptedMessage.length <= this.saltSizeBytes) {
-            throw new EncryptionOperationNotPossibleException();
+        if (this.saltGenerator.includePlainSaltInEncryptionResults()) {
+            // Check that the received message is bigger than the salt
+            if (encryptedMessage.length <= this.saltSizeBytes) {
+                throw new EncryptionOperationNotPossibleException();
+            }
         }
     
         try {
